PP-199 header alignment issue resolved

--- a/src/app/main/main/freind/freind.page.scss
+++ b/src/app/main/main/freind/freind.page.scss
@@ -2,9 +2,8 @@
   width: 100vw;
   height: 107px;
   background: linear-gradient(180deg,
-      #6976b9 0%,
+      #8b98dd 0%,
       rgba(105, 118, 185, 0.76) 100%);
-  box-shadow: 0px 5px 10px rgba(73, 73, 73, 0.25);
 }
 
 .v-cntr {
