--- a/src/app/main/main/game/game.page.scss
+++ b/src/app/main/main/game/game.page.scss
@@ -18,7 +18,7 @@ ion-grid {
 }
 
 .top-box {
-  display: flex;
+  display: inline-flex;
   align-items: center;
   width: 100%;
 }
@@ -285,7 +285,7 @@ span {
       #6976b9 0%,
       rgba(105, 118, 185, 0.76) 100%);
   box-shadow: 0px 5px 10px rgba(73, 73, 73, 0.25);
-  min-height: 100px;
+  height: 107px;
 }
 
 // .loader1 {
